--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.1.1
   firebase_auth: ^5.1.1
   device_preview: ^1.2.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
