--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^5.1.1
   device_preview: ^1.2.0
   google_sign_in: ^6.2.1
+  intl: 0.19.0
+  cloud_firestore: ^5.1.0
 
 dev_dependencies:
   flutter_test:
