--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.2.1
   intl: 0.19.0
   cloud_firestore: ^5.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
